--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -27,5 +27,12 @@ jobs:
   publish:
     runs-on: ubuntu-latest
     steps:
-      - name: Publish to dockerhub
-          run mvn jib:build
+     - uses: actions/checkout@v2
+     - name: Set up JDK 17
+       uses: actions/setup-java@v2
+       with:
+        java-version: '17'
+        distribution: 'adopt'
+        cache: maven
+     - name: Publish to dockerhub
+       run: mvn jib:build
