--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -24,15 +24,5 @@ jobs:
         cache: maven
     - name: Build with Maven
       run: mvn -B package --file pom.xml
-  publish:
-    runs-on: ubuntu-latest
-    steps:
-     - uses: actions/checkout@v2
-     - name: Set up JDK 17
-       uses: actions/setup-java@v2
-       with:
-        java-version: '17'
-        distribution: 'adopt'
-        cache: maven
-     - name: Publish to dockerhub
-       run: mvn jib:build
+    - name: Publish docker image
+      run: mvn jib:build
