--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -25,4 +25,4 @@ build-image:
     - mvn clean compile jib:build
     - mvn clean compile jib:dockerBuild
     - docker  run -e SPRING_DATASOURCE_URL=jdbc:mysql://192.168.1.35/library -e SPRING_DATASOURCE_USERNAME=root -e
-    - SPRING_DATASOURCE_PASSWORD=mypass -p 80:8080 -d registry.hub.docker.com/samuel19982/library-rest-controller
+      SPRING_DATASOURCE_PASSWORD=mypass -p 80:8080 -d registry.hub.docker.com/samuel19982/library-rest-controller
