Changed image to latest

--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -24,4 +24,5 @@ jobs:
     - name: Recompile for internal use
       run: mvn clean compile jib:dockerBuild
     - name: Run container locally
-      run: docker  run -e SPRING_DATASOURCE_URL=jdbc:mysql://192.168.1.35/library -e SPRING_DATASOURCE_USERNAME=root -e SPRING_DATASOURCE_PASSWORD=mypass -p 80:8080 -d registry.hub.docker.com/samuel19982/library-rest-controller
+      run: docker  run -e SPRING_DATASOURCE_URL=jdbc:mysql://192.168.1.35/library -e SPRING_DATASOURCE_USERNAME=root
+      -e SPRING_DATASOURCE_PASSWORD=mypass -p 80:8080 -d registry.hub.docker.com/samuel19982/library-rest-controller:latest
